--- a/www/css/css/colors/yellow.css
+++ b/www/css/css/colors/yellow.css
@@ -48,7 +48,7 @@ background-color:#fff;
 }
 #homepage,
 #homepage .ui-panel-wrapper {
-	background-color:#e4b000;
+	background-color:#fff;
 	/*height: 0px;*/
 }
 .secondarypage,
